overlays/staging/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: python-app-staging
  namespace: staging
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`python-app-staging.192.168.1.165.nip.io`)
      kind: Rule
      services:
        - name: python-app
          port: 80
      middlewares:
        - name: ip-whitelist
          namespace: default
